[tool.poetry]
name = "fetch"
version = "0.1.0"
description = ""
authors = ["shrutisharma7500 <shrutisharma94827@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uagents = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

